# Homework_31_PD12

./: README.md  manage.py  pyproject.toml  pytest.ini
Homework_31_PD12/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_category_slug_alter_advertisement_description_and_more.py  0003_alter_category_slug.py  0004_alter_category_slug.py  0005_alter_category_slug.py  0006_alter_category_slug.py
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_birth_date_alter_user_email.py
data/: ad.json  create_fill_database.py  location.json  user.json
data/raw_data/: ad.csv  csv_convert.py  location.csv
locations/: admin.py  models.py  permissions.py  serializers.py  views.py
locations/migrations/: 0001_initial.py
selections/: admin.py  models.py  permissions.py  serializers.py  views.py
selections/migrations/: 0001_initial.py
tests/: conftest.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py  factories.py
tests/selections/: selection_create_test.py
